k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: patientapp-vs
  namespace: patient-app
spec:
  hosts: ["*"]
  gateways:
    - patientapp-gateway
  http:
    - match:
        - uri: { prefix: "/v1/users" }
      route:
        - destination:
            host: api-gateway.patient-app.svc.cluster.local
            port: { number: 8080 }
    - match:
        - uri: { prefix: "/v1/auth" }
      route:
        - destination:
            host: api-gateway.patient-app.svc.cluster.local
            port: { number: 8080 }
